--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ Django==1.7.5
 django-debug-toolbar==1.2.1
 django-vanilla-views==1.0.3
 dj-static==0.0.6
+gunicorn==19.3.0
+newrelic==2.46.0.37
 Unipath==1.0
